# KTH-labs

./: answers.txt  gain.m
AI/Checker_1342611/: Pair.java  Player.java
AI/DuckHunt_423/: HMM.java  Matrix.java  Model.java  Player.java  Species.java  State.java
AI/HM1/: Matrix.java  Util.java  hmm3_01-3.in  main.java
AI/HM1/first_part/: RandomValues.java  RandomValues_gaussian.java  Util.java  main.java
AI/HM1/second_part/: Client.java  GameServer.java  Guess.java  HMM.java  Main.java  Matrix.java  Model.java  MyBird.java  Player.java  Species.java  State.java  Test.java  Util.java  launch.sh
AI/HM2/Checkers/: Constants.java  GameStateEvaluated.java  Player.java
AI/HM2/TTT/: GameStateEvaluated.java
AI/HM2/TTT3D/: Player.java
AI/TicTacToe2d_1343295/: Player.java
AI/TicTacToe3D_1335223/: Pair.java
Machine learning/Assignment 1/: ent.m
Machine learning/Lab 1/: assignment 4.docx  assignments 1-2-3.txt
Machine learning/Lab 1/src/: buildAndPrune.m  ent.m  gain.m  gain_split2.m
Robotics/src/lab1_calib/: CMakeLists.txt  package.xml
Robotics/src/lab1_calib/src/: distance_sensor_calib_node.cpp
Robotics/src/ras_lab1_controllers_v1/lab1_launch/: CMakeLists.txt  package.xml
Robotics/src/ras_lab1_controllers_v1/lab1_launch/launch/: circle.launch  line.launch  wall_following.launch
Robotics/src/ras_lab1_controllers_v1/ras_lab1_cartesian_controllers/: CMakeLists.txt  package.xml
Robotics/src/ras_lab1_controllers_v1/ras_lab1_controllers/: package.xml
Robotics/src/ras_lab1_controllers_v1/ras_lab1_motor_controller/: CMakeLists.txt  package.xml
(+7 files in other folders)
